<resources>
    <string name="app_name">pra_project_final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mycart">MyCart</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="ini_adalah_deskripsi_produk">Ini adalah deskripsi produk</string>
    <string name="_5000000">5000000</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="favorite">Favorite</string>
    <string name="email">Type your email here</string>
    <string name="password">Type your password here</string>
    <string name="passwordd">Password</string>
    <string name="register">Register</string>
    <string name="emaill">Email</string>
    <string name="new_product">New Product</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_passwordd">Confirm Password</string>
    <string name="home">HOME</string>
    <string name="history">History</string>
    <string name="favoritee">Favorite</string>
    <string name="profile">PROFILE</string>
    <string name="second_product">Second Product</string>
    <string name="nama_produkk">Nama Produk</string>
    <string name="ini_deskripsi_di_halaman_favorite">Ini deskripsi di halaman favorite</string>
    <string name="nama_produkkk">Nama Produk</string>
    <string name="deskripsi_berita">Deskripsi Berita</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="deskripsi_history">ini deskripsi di halaman history</string>
</resources>