<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/splash_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.LoginFragment">


    <!--Logo-->

    <ImageView
        android:id="@+id/imgLogo"
        android:src="@drawable/ecommerce_logo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="80dp"/>


    <!--Input Email-->

    <TextView
        android:id="@+id/txtEmail"
        android:text="@string/emaill"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            android:layout_below="@id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:boxBackgroundColor="@color/et_bg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/et_bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


    <!--Input Password-->

    <TextView
        android:id="@+id/txtPassword"
        android:text="@string/passwordd"
        android:layout_marginTop="10dp"
        android:layout_below="@id/inputEmail"
        android:textStyle="bold"
        android:textSize="18sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            android:layout_below="@id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:boxBackgroundColor="@color/et_bg"

            app:hintAnimationEnabled="false"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/et_bg"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


    <!--Tombol Login-->

    <ImageView
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/inputPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/login_btn" />


    <!--Tombol Register-->

    <TextView
        android:id="@+id/txtRegist"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>