<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:id="@+id/toggleFavorit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_favorite"
        android:focusable="false"
        android:textOff=""
        android:textOn="" />

    <TextView
        android:id="@+id/txtDetailNamaProduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBack"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginBottom="10dp"
        android:text="@string/nama_produk"
        android:textColor="@color/title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImgProduk"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtDetailNamaProduk"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgDetailProduk"
            android:src="@drawable/produk"
            android:scaleType="centerCrop"
            android:layout_margin="20dp"
            android:layout_width="250dp"
            android:layout_height="250dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/desc"
        android:text="@string/deskripsi_produk"
        android:layout_below="@id/cardImgProduk"
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_regular"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtDetailDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:layout_below="@id/desc"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:justificationMode="inter_word"
        android:text="@string/ini_adalah_deskripsi_produk"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtDetailHargaProduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/_5000000"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/btnAddToCart"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btnCart"
            android:background="@drawable/rectangle"
            android:layout_width="200dp"
            android:layout_height="60dp"/>

        <TextView
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>

</RelativeLayout>